@@ -2,7 +2,6 @@ package com.Java_Programming.project.services;
 
 import com.Java_Programming.project.models.ApplicationUser;
 import com.Java_Programming.project.repositories.UserRepository;
-import org.bson.Document;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -10,7 +9,6 @@ import org.springframework.stereotype.Component;
 import org.springframework.stereotype.Service;
 import java.util.Date;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @Component
@@ -25,10 +23,6 @@ public class UserServices {
     }
 
     public ResponseEntity<String> loginUser(ApplicationUser entity) {
-
-        Document query = new Document("email", entity.getEmail())
-                .append("password", entity.getPassword());
-
         List<ApplicationUser> users = userRepository.findAll();
         List<ApplicationUser> applicationUsers = users.stream()
                 .filter( applicationUser -> applicationUser
@@ -36,9 +30,9 @@ public class UserServices {
                         .equals(entity.getEmail()) && applicationUser
                         .getPassword()
                         .equals(entity.getPassword()))
-                .collect(Collectors.toList());
+                .toList();
 
-        if (applicationUsers != null && applicationUsers.size() > 0) return new ResponseEntity<>( "Success",HttpStatus.OK) ;
+        if (!applicationUsers.isEmpty()) return new ResponseEntity<>( "Success",HttpStatus.OK) ;
         return new ResponseEntity<>( "Failed",HttpStatus.NOT_FOUND);
     }
 }
